# Reach

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/ansible/: runner.rs
src-tauri/src/credentials/: master.rs  mod.rs  vault.rs
src-tauri/src/ipc/: ai_commands.rs  credential_commands.rs  editor_commands.rs  marketplace_commands.rs  mod.rs  monitoring_commands.rs  playbook_commands.rs  plugin_commands.rs  pty_commands.rs  serial_commands.rs  session_commands.rs  settings_commands.rs  sftp_commands.rs  snippet_commands.rs  ssh_commands.rs  sshconfig_commands.rs  terraform_commands.rs  tofu_commands.rs  toolchain_commands.rs  tunnel_commands.rs  vault_commands.rs
src-tauri/src/monitoring/: collector.rs
src-tauri/src/playbook/: engine.rs  mod.rs  modules.rs  parser.rs  schema.rs  storage.rs
src-tauri/src/plugin/: hooks.rs  host_api.rs  manager.rs  marketplace.rs  mod.rs  sandbox.rs  schema.rs  storage.rs
src-tauri/src/pty/: manager.rs
src-tauri/src/serial/: port.rs
src-tauri/src/session/: config.rs  storage.rs
src-tauri/src/sftp/: browser.rs  mod.rs  transfer.rs
src-tauri/src/ssh/: client.rs  config.rs  keyfile.rs  mod.rs
src-tauri/src/terraform/: engine.rs  types.rs
src-tauri/src/tofu/: runner.rs
src-tauri/src/toolchain/: detect.rs  install.rs
src-tauri/src/tunnel/: manager.rs
src-tauri/src/vault/: crypto.rs  error.rs  (+9 more)
(+167 files in other folders)
