[package]
name = "reach"
version = "0.1.0"
description = "Cross-platform SSH & Remote Management Tool"
authors = ["Reach Contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "reach_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

# SSH
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"

# PTY
portable-pty = "0.8"

# Serial
serialport = "4"

# HTTP (AI API proxy)
reqwest = { version = "0.12", features = ["json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
